--- a/src/index.html
+++ b/src/index.html
@@ -22,25 +22,6 @@
   </head>
 
   <body>
-    <app-root>
-      <ion-tabs>
-        <ion-tab-bar slot="bottom">
-          <ion-tab-button tab="news">
-            <ion-icon name="newspaper"></ion-icon>
-            <ion-label>News</ion-label>
-          </ion-tab-button>
-
-          <ion-tab-button tab="home">
-            <ion-icon name="home"></ion-icon>
-            <ion-label>Home</ion-label>
-          </ion-tab-button>
-
-          <ion-tab-button tab="about">
-            <ion-icon name="information-circle"></ion-icon>
-            <ion-label>About</ion-label>
-          </ion-tab-button>
-        </ion-tab-bar>
-      </ion-tabs>
-    </app-root>
+    <app-root></app-root>
   </body>
 </html>
